[tool.poetry]
name = "loc-images"
version = "0.1.0"
description = ""
authors = ["Tim Martin <tim@timmart.in>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
httpx = "^0.22.0"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
pylint = "^2.12.2"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loc-images = "loc_images:main"

